2007-03-13  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Fix a bug in expand_module.

	* ocaml_utils.ml: Handle correctly pathnames instead of just basenames.

2007-03-13  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Use sys_file_exists instead of Sys.file_exists.

	* my_unix.ml: Since Sys.file_exists don't treat well captial letters.
	* my_std.ml: Fix a bug.
	* pathname.ml: Here is a an exception to the previous rule so, put a
	comment.

2007-03-11  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Fix the List.union order.

	* my_std.ml: Fix and improve List.union.
	* pathname.ml: Use it and fix merge_include_dirs.
	* test/good-output: Update since the union order was wrong.

2007-03-11  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Re fix menhir and include dirs.

	* ocaml_tools.ml: Specifiy ocamlc and -I with --ocamlc.

2007-03-11  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Fix a bug: Add include directories to menhir.

	* ocaml_tools.ml: Ditto.
	* my_std.ml,
	* signatures.mli: Specification typo.

2007-03-07  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Handle specially archives files during an import.

	* shell.ml: Ditto.

2007-03-07  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Use cp -p in copy_rule, and fix some typos in the manual.

	* manual/manual.tex: Typos.
	* rule.ml,
	* rule.mli: Add cp_p and use it for copy_rule.

2007-03-05  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Relaxe executor on exception condition.

	Patch from Berke.
	* executor.ml: Ignore Not_found and exceptional conditions.
	* TODO: Add an entry (needs to better understand POSIX).

2007-03-04  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Split where in bindir and libdir.

	* ocamlbuild_where.mli: Ditto.
	* ocaml_specific.ml: Update.
	* options.ml: Use bindir.
	* plugin.ml: Update.
	* start.sh: Update.

2007-03-04  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Virtual solvers for ocaml tools.
