@@ -159,9 +159,9 @@ Tata.tata => "TATA2"
 + BUILD2=../../_build/ocamlbuild.native a.byte a.native proj.docdir/index.html -no-skip -classic-display  -verbose 0 -nothing-should-be-rebuilt 
 + rm -rf _build
 + ../../_build/ocamlbuild.native a.byte a.native proj.docdir/index.html -no-skip -classic-display
-ocamldep.opt -modules a.ml > a.ml.depends
 ocamldep.opt -modules a.mli > a.mli.depends
 ocamlc.opt -c -o a.cmi a.mli
+ocamldep.opt -modules a.ml > a.ml.depends
 ocamldep.opt -modules b.mli > b.mli.depends
 ocamlc.opt -c -o b.cmi b.mli
 ocamlc.opt -c -o a.cmo a.ml
@@ -201,9 +201,9 @@ rm -rf proj.docdir
 mkdir -p proj.docdir
 ocamldoc.opt -load a.odoc -load b.odoc -load c.odoc -load d.odoc -load e.odoc -load f.odoc -html -d proj.docdir
 + ../../_build/ocamlbuild.native a.byte a.native proj.docdir/index.html -no-skip -classic-display -verbose 0 -nothing-should-be-rebuilt
-[cache hit] ocamldep.opt -modules a.ml > a.ml.depends
 [cache hit] ocamldep.opt -modules a.mli > a.mli.depends
 [cache hit] ocamlc.opt -c -o a.cmi a.mli
+[cache hit] ocamldep.opt -modules a.ml > a.ml.depends
 [cache hit] ocamldep.opt -modules b.mli > b.mli.depends
 [cache hit] ocamlc.opt -c -o b.cmi b.mli
 [cache hit] ocamlc.opt -c -o a.cmo a.ml
@@ -254,9 +254,9 @@ ocamldoc.opt -load a.odoc -load b.odoc -load c.odoc -load d.odoc -load e.odoc -l
 + BUILD2=../../_build/ocamlbuild.native -I a -I b aa.byte aa.native -no-skip -classic-display  -verbose 0 -nothing-should-be-rebuilt 
 + rm -rf _build
 + ../../_build/ocamlbuild.native -I a -I b aa.byte aa.native -no-skip -classic-display
-ocamldep.opt -modules a/aa.ml > a/aa.ml.depends
 ocamldep.opt -modules a/aa.mli > a/aa.mli.depends
 ocamlc.opt -c -I a -I b -o a/aa.cmi a/aa.mli
+ocamldep.opt -modules a/aa.ml > a/aa.ml.depends
 ocamldep.opt -modules b/bb.ml > b/bb.ml.depends
 ocamlc.opt -c -I b -I a -o b/bb.cmo b/bb.ml
 ocamlc.opt -c -I a -I b -o a/aa.cmo a/aa.ml
@@ -265,9 +265,9 @@ ocamlopt.opt -c -I b -I a -o b/bb.cmx b/bb.ml
 ocamlopt.opt -c -I a -I b -o a/aa.cmx a/aa.ml
 ocamlopt.opt str.cmxa b/bb.cmx a/aa.cmx -o a/aa.native
 + ../../_build/ocamlbuild.native -I a -I b aa.byte aa.native -no-skip -classic-display -verbose 0 -nothing-should-be-rebuilt
-[cache hit] ocamldep.opt -modules a/aa.ml > a/aa.ml.depends
 [cache hit] ocamldep.opt -modules a/aa.mli > a/aa.mli.depends
 [cache hit] ocamlc.opt -c -I a -I b -o a/aa.cmi a/aa.mli
+[cache hit] ocamldep.opt -modules a/aa.ml > a/aa.ml.depends
 [cache hit] ocamldep.opt -modules b/bb.ml > b/bb.ml.depends
 [cache hit] ocamlc.opt -c -I b -I a -o b/bb.cmo b/bb.ml
 [cache hit] ocamlc.opt -c -I a -I b -o a/aa.cmo a/aa.ml
@@ -288,9 +288,9 @@ ocamlopt.opt str.cmxa b/bb.cmx a/aa.cmx -o a/aa.native
 + rm -rf _build
 + ../../_build/ocamlbuild.native d.byte d.native -no-skip -classic-display
 ocamldep.opt -modules d.ml > d.ml.depends
-ocamldep.opt -modules a.ml > a.ml.depends
 ocamldep.opt -modules a.mli > a.mli.depends
 ocamlc.opt -c -o a.cmi a.mli
+ocamldep.opt -modules a.ml > a.ml.depends
 ocamldep.opt -modules stack.ml > stack.ml.depends
 ocamlc.opt -c -o stack.cmo stack.ml
 ocamldep.opt -modules b.ml > b.ml.depends
@@ -309,9 +309,9 @@ ocamlopt.opt -c -o d.cmx d.ml
 ocamlopt.opt stack.cmx c.cmx d.cmx -o d.native
 + ../../_build/ocamlbuild.native d.byte d.native -no-skip -classic-display -verbose 0 -nothing-should-be-rebuilt
 [cache hit] ocamldep.opt -modules d.ml > d.ml.depends
-[cache hit] ocamldep.opt -modules a.ml > a.ml.depends
 [cache hit] ocamldep.opt -modules a.mli > a.mli.depends
 [cache hit] ocamlc.opt -c -o a.cmi a.mli
+[cache hit] ocamldep.opt -modules a.ml > a.ml.depends
 [cache hit] ocamldep.opt -modules stack.ml > stack.ml.depends
 [cache hit] ocamlc.opt -c -o stack.cmo stack.ml
 [cache hit] ocamlc.opt -c -o a.cmo a.ml
@@ -342,9 +342,9 @@ ocamlopt.opt stack.cmx c.cmx d.cmx -o d.native
 + cp b.mli.v1 b.mli
 + cp d.mli.v1 d.mli
 + ../../_build/ocamlbuild.native -no-skip main.byte -classic-display
-ocamldep.opt -modules main.ml > main.ml.depends
 ocamldep.opt -modules main.mli > main.mli.depends
 ocamlc.opt -c -o main.cmi main.mli
+ocamldep.opt -modules main.ml > main.ml.depends
 ocamldep.opt -modules a.mli > a.mli.depends
 ocamldep.opt -modules d.mli > d.mli.depends
 ocamlc.opt -c -o a.cmi a.mli
@@ -360,9 +360,9 @@ ocamldep.opt -modules b.ml > b.ml.depends
 ocamlc.opt -c -o b.cmo b.ml
 ocamlc.opt d.cmo b.cmo a.cmo main.cmo -o main.byte
 + ../../_build/ocamlbuild.native -no-skip main.byte -classic-display -verbose 0 -nothing-should-be-rebuilt
-[cache hit] ocamldep.opt -modules main.ml > main.ml.depends
 [cache hit] ocamldep.opt -modules main.mli > main.mli.depends
 [cache hit] ocamlc.opt -c -o main.cmi main.mli
+[cache hit] ocamldep.opt -modules main.ml > main.ml.depends
 [cache hit] ocamldep.opt -modules a.mli > a.mli.depends
 [cache hit] ocamlc.opt -c -o a.cmi a.mli
 [cache hit] ocamldep.opt -modules d.mli > d.mli.depends
@@ -396,9 +396,9 @@ ocamlc.opt -c -o d.cmo d.ml
 ocamlc.opt -c -o b.cmo b.ml
 ocamlc.opt d.cmo b.cmo a.cmo main.cmo -o main.byte
 + ../../_build/ocamlbuild.native -no-skip main.byte -classic-display -verbose 0 -nothing-should-be-rebuilt
-[cache hit] ocamldep.opt -modules main.ml > main.ml.depends
 [cache hit] ocamldep.opt -modules main.mli > main.mli.depends
 [cache hit] ocamlc.opt -c -o main.cmi main.mli
+[cache hit] ocamldep.opt -modules main.ml > main.ml.depends
 [cache hit] ocamldep.opt -modules a.mli > a.mli.depends
 [cache hit] ocamlc.opt -c -o a.cmi a.mli
 [cache hit] ocamldep.opt -modules d.mli > d.mli.depends
@@ -429,9 +429,9 @@ PASS
 + svn revert bb.ml
 + ../../_build/ocamlbuild.native bbcc.cma main.byte bbcc.cmxa main.native -no-skip -classic-display
 ocamlopt.opt -I /Users/ertai/wext/ocamlbuild/trunk2/_install/lib/ocamlbuild unix.cmxa /Users/ertai/wext/ocamlbuild/trunk2/_install/lib/ocamlbuild/ocamlbuildlib.cmxa myocamlbuild.ml /Users/ertai/wext/ocamlbuild/trunk2/_install/lib/ocamlbuild/ocamlbuild.cmx -o myocamlbuild
-ocamldep.opt -modules bb.ml > bb.ml.depends
 ocamldep.opt -modules bb.mli > bb.mli.depends
 ocamlc.opt -c -o bb.cmi bb.mli
+ocamldep.opt -modules bb.ml > bb.ml.depends
 ocamldep.opt -modules cc.ml > cc.ml.depends
 ocamldep.opt -modules aa.ml > aa.ml.depends
 ocamldep.opt -modules c2.mli > c2.mli.depends
@@ -458,9 +458,9 @@ ocamlopt.opt -c -o c3.cmx c3.ml
 ocamlopt.opt -c -o main.cmx main.ml
 ocamlopt.opt aa.cmx c2.cmx bbcc.cmxa c3.cmx main.cmx -o main.native
 + ../../_build/ocamlbuild.native bbcc.cma main.byte bbcc.cmxa main.native -no-skip -classic-display -verbose 0 -nothing-should-be-rebuilt
-[cache hit] ocamldep.opt -modules bb.ml > bb.ml.depends
 [cache hit] ocamldep.opt -modules bb.mli > bb.mli.depends
 [cache hit] ocamlc.opt -c -o bb.cmi bb.mli
+[cache hit] ocamldep.opt -modules bb.ml > bb.ml.depends
 [cache hit] ocamlc.opt -c -o bb.cmo bb.ml
 [cache hit] ocamldep.opt -modules cc.ml > cc.ml.depends
 [cache hit] ocamldep.opt -modules aa.ml > aa.ml.depends
@@ -488,9 +488,9 @@ ocamlopt.opt aa.cmx c2.cmx bbcc.cmxa c3.cmx main.cmx -o main.native
 [cache hit] ocamlopt.opt aa.cmx c2.cmx bbcc.cmxa c3.cmx main.cmx -o main.native
 + cp bb2.ml bb.ml
 + ../../_build/ocamlbuild.native bbcc.cma main.byte bbcc.cmxa main.native -no-skip -classic-display -verbose 0
-ocamldep.opt -modules bb.ml > bb.ml.depends
 [cache hit] ocamldep.opt -modules bb.mli > bb.mli.depends
 [cache hit] ocamlc.opt -c -o bb.cmi bb.mli
+ocamldep.opt -modules bb.ml > bb.ml.depends
 [cache hit] ocamldep.opt -modules cc.ml > cc.ml.depends
 [cache hit] ocamldep.opt -modules aa.ml > aa.ml.depends
 [cache hit] ocamlc.opt -c -o aa.cmo aa.ml
@@ -517,9 +517,9 @@ ocamlopt.opt -c -o c3.cmx c3.ml
 ocamlopt.opt -c -o main.cmx main.ml
 ocamlopt.opt aa.cmx c2.cmx bbcc.cmxa c3.cmx main.cmx -o main.native
 + ../../_build/ocamlbuild.native bbcc.cma main.byte bbcc.cmxa main.native -no-skip -classic-display -verbose 0 -nothing-should-be-rebuilt
-[cache hit] ocamldep.opt -modules bb.ml > bb.ml.depends
 [cache hit] ocamldep.opt -modules bb.mli > bb.mli.depends
 [cache hit] ocamlc.opt -c -o bb.cmi bb.mli
+[cache hit] ocamldep.opt -modules bb.ml > bb.ml.depends
 [cache hit] ocamlc.opt -c -o bb.cmo bb.ml
 [cache hit] ocamldep.opt -modules cc.ml > cc.ml.depends
 [cache hit] ocamldep.opt -modules aa.ml > aa.ml.depends
@@ -547,9 +547,9 @@ ocamlopt.opt aa.cmx c2.cmx bbcc.cmxa c3.cmx main.cmx -o main.native
 [cache hit] ocamlopt.opt aa.cmx c2.cmx bbcc.cmxa c3.cmx main.cmx -o main.native
 + cp bb3.ml bb.ml
 + ../../_build/ocamlbuild.native bbcc.cma main.byte bbcc.cmxa main.native -no-skip -classic-display -verbose 0
-ocamldep.opt -modules bb.ml > bb.ml.depends
 [cache hit] ocamldep.opt -modules bb.mli > bb.mli.depends
 [cache hit] ocamlc.opt -c -o bb.cmi bb.mli
+ocamldep.opt -modules bb.ml > bb.ml.depends
 [cache hit] ocamldep.opt -modules cc.ml > cc.ml.depends
 [cache hit] ocamldep.opt -modules aa.ml > aa.ml.depends
 [cache hit] ocamlc.opt -c -o aa.cmo aa.ml
@@ -576,9 +576,9 @@ ocamlopt.opt -a bb.cmx cc.cmx -o bbcc.cmxa
 [cache hit] ocamlopt.opt -c -o main.cmx main.ml
 ocamlopt.opt aa.cmx c2.cmx bbcc.cmxa c3.cmx main.cmx -o main.native
 + ../../_build/ocamlbuild.native bbcc.cma main.byte bbcc.cmxa main.native -no-skip -classic-display -verbose 0 -nothing-should-be-rebuilt
-[cache hit] ocamldep.opt -modules bb.ml > bb.ml.depends
 [cache hit] ocamldep.opt -modules bb.mli > bb.mli.depends
 [cache hit] ocamlc.opt -c -o bb.cmi bb.mli
+[cache hit] ocamldep.opt -modules bb.ml > bb.ml.depends
 [cache hit] ocamlc.opt -c -o bb.cmo bb.ml
 [cache hit] ocamldep.opt -modules cc.ml > cc.ml.depends
 [cache hit] ocamldep.opt -modules aa.ml > aa.ml.depends
